# poetry-core

./: .pre-commit-config.yaml
src/poetry/core/: factory.py
src/poetry/core/json/schemas/: poetry-schema.json
tests/: test_factory.py
tests/fixtures/project_with_extras_in_extras/: pyproject.toml
tests/json/: test_poetry_schema.py
