[tool.poetry]
name = "extra-package"
version = "1.2.3"
description = "Some description."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
transformers = { version = "^4.30.2" }
psycopg = { version = "^3.1.9", optional = true, extras = ["binary"] }

[tool.poetry.extras]
torch = [ "transformers[torch,torch-vision]" ]
tf = [ "transformers[tf]" ]
c = [ "psycopg[c]" ]
